<resources>
    <string name="app_name">Portfolio_Chudakov</string>
    <string name="about_me">Обо мне</string>
    <string name="study">Учёба</string>
    <string name="job">Работа</string>
    <string name="plans">Планы</string>
    <string name="contacts">Контакты</string>
    <string name="profileName">Чудаков Матвей</string>
    <string name="description">Студент 4-го курса ИТМО</string>
    <string name="schoolName">Университет ИТМО</string>
    <string name="studyYears">2016-2020</string>
    <string name="sdudyDirection">Программная инженерия</string>
    <string name="gmail">matvey159@gmail.com</string>
    <string name="vk">https://vk.com/id145659792</string>
    <string name="github">https://github.com/chMatvey</string>
    <string name="telegram">\@matveyChudakov</string>
    <string name="careerPlans">Что касается карьеры, то в ближайщих пол года продолжать работать на пол ставки, параллельно с учебой. При этом заниматься своим проектом, изучать новое, общаться с опытными людьми, учуться у них, развиваться в своей сфере, читать книги, учебный матриал, возможно проходить курсы.</string>
    <string name="studyPlans">Также, планирую продолжить обучение на магистратуре, при на учебу планирую тратить по минимуму времени, большую часть работе. Так же хотелось бы чтобы на работе была возможность выезда в командировки за границу, чтобы можно было совмещать работу с путешествиями</string>
    <string name="skillPlans">В плане рабочих навыков, большую часть сил планирую отдать back-end разработке, т.к это направление мне более интересно, и оно связанно со всеми основными направлениями в it, веб-разработка, мобильная десктопная. Также, планирую изучать английский, повышать разговорный навык и навык чтения.</string>
</resources>
