<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/BackgroundWhite">

    <androidx.cardview.widget.CardView
        android:id="@+id/mail"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:src="@drawable/gmail" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/gmail"
                android:textColor="#2F80ED"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vk"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:src="@drawable/vk" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/vk"
                android:textColor="#2F80ED"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/github"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/description"
                android:src="@drawable/github" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/github"
                android:textColor="#2F80ED"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/telegram"
        android:layout_width="330dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/description"
                android:src="@drawable/telegram" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/telegram"
                android:textColor="#2F80ED"
                android:textSize="17sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>